[package]
name = "presale"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "0.8.0" }
cw20 = { version = "0.8.0" }
cw721 = { version = "0.8.0" }
cw721-base = { version = "0.8.0", features = ["library"] }
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }
integer-sqrt = "0.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-bignumber = "2.2.0"
whitelist = { path = "../whitelist", default-features = false, version = "0.1.0"}
vesting = { path = "../vesting", default-features = false, version = "0.1.0"}

[dev-dependencies]
cosmwasm-schema = "0.16.0"
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-storage = { version = "0.16.0" }
