[package]
name = "vesting"
version = "0.1.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
cw721 = { version = "0.13.2" }
cw721-base = { version = "0.13.2", features = ["library"] }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.4" }
integer-sqrt = "0.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-storage = { version = "1.0.0" }
